# ChangeLog for dev-util/eclipse-sdk
# Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.4 2003/11/03 18:16:26 karltk Exp $

*eclipse-sdk-2.1.1 (04 Nov 2003)

  04 Oct 2003; Karl Trygve Kalleberg <karltk@gentoo.org>
  eclipse-sdk-2.1.1.ebuild:
  Fixes #32165. We blindly assume that any system will either have sh-utils 
  or coreutils installed, which should be a reasonable assumption.
  
*eclipse-sdk-2.1.1 (05 Oct 2003)

  05 Oct 2003; Karl Trygve Kalleberg <karltk@gentoo.org>
  eclipse-sdk-2.1.1.ebuild, files/eclipse:
  Thanks to the wonderful work of Jesse <yurkjes@iit.edu> and Tom Prado
  <tprado@charter.net>, we finally have from-source ebuild for the SDK.
  Fixes #19317.
  
*eclipse-sdk-2.1 (30 Jun 2003)

  30 Jun 2003; Karl Trygve Kalleberg <karltk@gentoo.org>
  eclipse-sdk-2.1.ebuild, files/eclipse.desktop:
  Initial import. Note that a binary ebuild for Eclipse also exists, as
  eclipse-sdk-bin. This ebuild will eventually try to build all of Eclipse 
  from sources. For now, it only builds the basic platform, and none of the
  GTK+ stuff.