@@ -1,8 +1,11 @@
 MD5 33b6a16db3c7c859125089c5cb9417aa ChangeLog 1156
 MD5 1d0493e018ee744da0fd103bd767909a eclipse-sdk-2.1.ebuild 82879
 MD5 f7c1fff0ba8c4f8670d6d242f5026a7f eclipse-sdk-2.1.1.ebuild 7417
+MD5 40278ec7a8e15c3f11a988f45287c7a5 eclipse-sdk-2.1.2.ebuild 7416
 MD5 9cc8d5162e981d7b7fc1ef9fa1ac0e65 metadata.xml 919
+MD5 dcdc95ad11ff30777b3ce56b43746737 eclipse-sdk-2.1.2.ebuild~ 7413
 MD5 5bea1174eca3d2e368ad728e5086b24a files/digest-eclipse-sdk-2.1 86
 MD5 a01c2dd64e43d4ee9dd96dbf0b4578c7 files/eclipse.desktop 213
 MD5 9b30c0b9d4af6ed66a09e216efadefe6 files/eclipse 1067
 MD5 76c2f3ddbb548ca9d3f1522498f51bc0 files/digest-eclipse-sdk-2.1.1 88
+MD5 cc086062a18b18e0a241f27d0ed2de44 files/digest-eclipse-sdk-2.1.2 88
