@@ -1,7 +1,13 @@
 # ChangeLog for dev-util/eclipse-sdk
 # Copyright 2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.4 2003/11/03 18:16:26 karltk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eclipse-sdk/ChangeLog,v 1.5 2003/11/17 17:08:17 karltk Exp $
 
+*eclipse-sdk-2.1.2 (17 Nov 2003)
+
+  17 Nov 2003; Karl Trygve Kalleberg <karltk@gentoo.org>
+  eclipse-sdk-2.1.2.ebuild:
+  New upstream version. Fixes #33680.
+  
 *eclipse-sdk-2.1.1 (04 Nov 2003)
 
   04 Oct 2003; Karl Trygve Kalleberg <karltk@gentoo.org>
